# DraftGame

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
frontend/: .gitignore  Dockerfile  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json  tsconfig.json
frontend/src/: index.html  main.ts
frontend/src/app/: app.component.ts
frontend/src/app/components/: draft-list.component.ts
frontend/src/app/models/: game.ts
frontend/src/app/services/: game-api.service.ts
frontend/src/environments/: environment.docker.ts
scripts/: docker-up.sh
